# FluentUIStyle

./: .gitignore  .gitmodules  CMakeLists.txt  CusFluentUI3.pro  LICENSE  README.md  README_EN.md  blog.md  changelog.txt  common.pri  compile_flags.txt  cusproxystyle.cpp  cusproxystyle.h  fluentw3uistyle.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qhexstring_p.h  qstylehelper_p.h  resources.qrc
3rd/kissfft/: CMakeLists.txt
3rd/qcustomplot/: CMakeLists.txt
AudiomaticMini/: CMakeLists.txt  audiomaticplayerwidget.cpp  audiomaticplayerwidget.h  audiomaticplayerwidget.ui  audiospectrumanalyzer.cpp  audiospectrumanalyzer.h  jamendoclient.cpp  jamendoclient.h  main.cpp  playerwindow.cpp  playerwindow.h  sinewavegenerator.cpp  sinewavegenerator.h  spectrumdemomain.cpp  spectrumdemowindow.cpp  spectrumdemowindow.h  spectrumwidget.cpp  spectrumwidget.h
ExWidgets/: CMakeLists.txt  ExWidgets.pri  excolorpicker.cpp  excolorpicker.h  excolorpickerbutton.cpp  excolorpickerbutton.h  excontentdialog.cpp  excontentdialog.h  exmessagebox.cpp  exmessagebox.h  exnavtreewidget.cpp  exnavtreewidget.h  exrangeslider.cpp  extabwidget.cpp  extabwidget.h  exwinuinavigationview.cpp
Example/: CMakeLists.txt  Example.pro  aboutprojectwidget.cpp  aboutprojectwidget.h  changelog.txt  colorshowcasewidget.cpp  dialogshowcasewidget.cpp  dialogshowcasewidget.h  installedsoftwaretablewidget.cpp  installedsoftwaretablewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rangeslidershowcasewidget.cpp  rangeslidershowcasewidget.h  resources.qrc  segoeicongallerywidget.cpp  segoeicongallerywidget.h  tabshowcasewidget.cpp  tabshowcasewidget.h
Example/font-icon/: fonticon.cpp  resource.qrc
Example/frameless/: fluenttitlebar.cpp  fluenttitlebar.h  fluentwindowframe.cpp  fluentwindowframe.h
Example/tools/: fill_en_ts.py
Example/translations/: Example_en_US.ts
cusproxystyle/: cusproxystyle.cpp  cusproxystyle.h  cusproxystyle.pri  qstyleanimation.cpp
cusproxystyle/customcontrol/: dockwidgettitlebar.h
customcontrol/SlidingStackedWidget/: slidingstackedwidget.cpp  slidingstackedwidget.h
fluentui3style/: CMakeLists.txt  FluentUI3Style.pro  fluentui3colors.cpp  fluentui3colors.h  fluentui3style.cpp  fluentui3style.h  fluentui3style.pri  fluentui3styleproperties.h  fluentuiappearance.cpp  fluentuiappearance.h  palettemanager.cpp  palettemanager.h  qstyleanimation.cpp  qstyleanimation_p.h  qstylehelper.cpp  resource.qrc  thememanager.cpp  thememanager.h
fluentui3style/customcontrol/: dockwidgettitlebar.cpp  dockwidgettitlebar.ui
fluentui3style/plugin/: CMakeLists.txt  plugin.pro
fluentui3style/resource/: SegoeFluentIcons.html  SegoeFluentIconsEnum.txt
