set(LIBRARY_SOURCES
    fluentui3style_global.h
    fluentui3styleproperties.h
    fluentui3style.cpp
    fluentui3style.h
    fluentuiappearance.cpp
    fluentuiappearance.h
    palettemanager.cpp
    palettemanager.h
    qhexstring_p.h
    qstyleanimation.cpp
    qstyleanimation_p.h
    qstylehelper.cpp
    qstylehelper_p.h
    resource.qrc
)

add_library(FluentUI3Style SHARED
    ${LIBRARY_SOURCES}
)

target_compile_definitions(FluentUI3Style PRIVATE FLUENT_USE_QT_STYLE FLUENTUI3STYLE_LIBRARY)

target_include_directories(FluentUI3Style PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../FluentUI3Colors>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/FluentUI3Style>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/FluentUI3Colors>
)

target_link_libraries(FluentUI3Style PUBLIC
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Gui
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Svg
)

if(WIN32)
    target_link_libraries(FluentUI3Style PRIVATE dwmapi)
endif()



set_target_properties(FluentUI3Style PROPERTIES
    DEBUG_POSTFIX d
)
